fix multiple review alignment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -307,11 +307,10 @@ div.userOptions {
 /* To be changed by Grigoria */
 
 div.preview_container {
-  overflow: auto;
 }
 
 div.preview_review {
-  overflow: auto;
+  margin-left: 10px !important;
 }
 
 
@@ -321,6 +320,9 @@ div.preview_review {
 aside {
   background-color: #777;
   margin-top: -30px;
+  margin-left: 30px !important;
+  width: 230px !important;
+
   h2 {
     color: #ddd;
     text-align: center;
